<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lazeebear.parkhere.Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="32dp"
            android:layout_marginBottom="16dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/address_label"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_weight="1"
                    />

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/coordinates_label"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:weightSum="1">
                    <EditText
                        android:id="@+id/coordinateX"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/prompt_coorX"
                        android:layout_weight="0.50" />
                    <EditText
                        android:id="@+id/coordinateY"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/prompt_coorY"
                        android:layout_weight="0.50" />
                </LinearLayout>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date_label"/>
                <TextView android:text="Select Date"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/time_slot_label"/>
                <TextView
                    android:text="Select Time"/>
            </TableRow>

        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_label"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</RelativeLayout>
