<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--Address-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/addressCreateSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Start date picker-->
        <TextView
            android:id="@+id/create_spot_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/date_hint_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
        <!--End date picker-->
        <TextView
            android:id="@+id/create_spot_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/date_hint_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!--Start hour dropdown-->
        <TextView
            android:id="@+id/create_spot_start_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hour_hint_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"/>
        <!--End hour dropdown-->
        <TextView
            android:id="@+id/create_spot_end_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hour_hint_label"/>
    </LinearLayout>
    <!--Repeat weekly checkbox-->
    <CheckBox android:id="@+id/create_spot_repeat_weekly_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_weekly_label"
        android:onClick="onCheckboxClicked"/>
    <!--Price field-->
    <EditText
        android:id="@+id/create_spot_price_field"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:hint="@string/price_label"
        android:text="@string/price_label"
        android:inputType="textNoSuggestions|numberDecimal"/>
    <!--Photos-->
    <Button
        android:id="@+id/upload_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo_button_label"/>
    <!--Description-->
    <EditText
        android:id="@+id/create_spot_description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_label"
        android:inputType="textMultiLine|text|textAutoCorrect"/>
    <!--Options and filters-->
    <CheckBox android:id="@+id/create_spot_covered_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covered_label"
        android:onClick="onCheckboxClicked"/>
    <!--Submit button (sends back to homepg)-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spot Type"/>
        <Spinner
            android:id="@+id/spot_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/car_types"/>
    </LinearLayout>

    <!--Cancelation policy-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancellation Policy"/>
        <Spinner
            android:id="@+id/cancellation_policy_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/cancellation_policy"/>
    </LinearLayout>
    <TextView
        android:id="@+id/cancellation_policy_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <!--Cancelation policy /-->


    <Button
        android:id="@+id/create_spot_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>
