<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/address_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/address_create_new_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_create_new" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/create_new_address_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address_input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_label" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_label"/>

                <CheckBox
                    android:id="@+id/address_isCovered_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covered_label"/>

                <Button
                    android:id="@+id/address_select_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_choose_photo"/>

                <ImageView
                    android:id="@+id/address_image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/address_create_new_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create New Address" />
            </LinearLayout>

            <Button
                android:id="@+id/address_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Continue" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
