<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_filter_search_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lazeebear.parkhere.FilterSearchResults"
    tools:showIn="@layout/app_bar_filter_search_results">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_search_results_title"
            android:textSize="32dp"
            android:layout_marginBottom="16dp"
            />
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/spot_rating_label"
                   android:layout_marginRight="16dp"/>
                <LinearLayout
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spot_rating_lower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="~"/>
                    <Spinner
                        android:id="@+id/spot_rating_upper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_rating_label"
                    android:layout_marginRight="16dp"/>
                <LinearLayout
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/owner_rating_lower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="~"/>
                    <Spinner
                        android:id="@+id/owner_rating_upper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_type_label"/>
                <LinearLayout>
                    <Spinner
                        android:id="@+id/car_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/car_types"/>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_range_label"
                    />
                <TextView android:text="Choose Date Here"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range_label"/>
                <LinearLayout
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/price_range_lower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="~"/>
                    <Spinner
                        android:id="@+id/price_range_upper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/rating_range"/>
                </LinearLayout>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covered_label"/>
                <Spinner
                    android:id="@+id/covered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/yes_no"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_label"/>
                <LinearLayout
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/prompt_distance"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>
